# satisfactory-save-file

./: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: read_string.rs  save_file.rs  save_object.rs  world_properties.rs
src/: lib.rs  zlib_reader.rs
test_files/: new_world.sav  test_save2.sav
