[package]
name = "satisfactory-save-file"
version = "0.1.1"
authors = ["Makoto <makoto@emurasoft.com>"]
edition = "2018"
description = "Satisfactory save file representation and parser"
license = "MIT"
repository = "https://github.com/MakotoE/satisfactory-save-file"
keywords = ["satisfactory", "save-file"]
readme = "README.md"
documentation = "https://docs.rs/satisfactory-save-file"

[dependencies]
anyhow = "1.0"
byteorder = "1.4"
flate2 = { version = "1.0", default_features = false, features = ["zlib"] }
log = "0.4"
chrono = "0.4"

[dev-dependencies]
env_logger = "0.8"